--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -1,8 +1,8 @@
 name: Salvar arquivo csv todo dia às 10h
 
 on:
-  push:
-    branches: main
+  schedule:
+    - cron: "30 12 * * *"
 
 jobs:
   save_data:
