--- a/.github/workflows/send_email.yml
+++ b/.github/workflows/send_email.yml
@@ -1,8 +1,8 @@
 name: Enviar e-mail todo dia às 12h
 
 on:
-  push:
-    branches: main
+  schedule:
+    - cron: "0 13 * * *"
 
 jobs:
   enviar_email:
