--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -22,14 +22,16 @@ jobs:
 
       - name: Executar código Python
         run: python save.py
-
+          
       - name: Commit e push das alterações
         run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
           git add data/*
+          git add --ignore-errors __pycache__/
           git commit -m "Atualizar arquivo CSV $(date)"
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           username: actions-user
+
