--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -29,6 +29,8 @@ jobs:
           git config --local user.email "actions@github.com"
           git add data/*
           git commit -m "Atualizar arquivo CSV $(date)"
+          git checkout main    # troca de branch
+          git pull origin main # puxa as alterações da branch no remoto origin
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
