--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -26,16 +26,15 @@ jobs:
       # Add new files in data folder, commit along with other modified files, push
       - name: Commit e push das alterações
         run: |
-          git pull origin main
-          git config --local user.name github-actions
+          git config --local user.name actions-user
           git config --local user.email "actions@github.com"
           git add data/*
-          git commit -am "Atualizar arquivo CSV $(date)"
+          git commit -m "Atualizar arquivo CSV $(date)"
+          git checkout main    # troca de branch
+          git pull origin main # puxa as alterações da branch no remoto origin
           git push origin main
         env:
-          REPO_KEY: ${{secrets.GITHUB_TOKEN}}
-          username: github-actions
-        
-        
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          username: actions-user
     
 
