--- a/.github/workflows/send_email.yml
+++ b/.github/workflows/send_email.yml
@@ -2,7 +2,7 @@ name: Enviar e-mail todo dia às 13h
 
 on:
   schedule:
-    - cron: "10 * * * *"
+    - cron: "30 15 * * *"
 
 jobs:
   enviar_email:
