--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -1,7 +1,9 @@
 name: Salvar arquivo csv todo dia às 12h 30min
 
+# Controls when the action will run.
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: '0 18 * * *'
 
 jobs:
   save_data:
