--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -3,7 +3,7 @@ name: Salvar arquivo csv todo dia às 12h 30min
 # Controls when the action will run.
 on:
   schedule:
-    - cron: '40 21 * * *'
+    - cron: '40 22 * * *'
 
 jobs:
   save_data:
@@ -38,4 +38,22 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           username: actions-user
     
+  enviar_email:
+    needs: save_data
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout do código
+      uses: actions/checkout@v2
+
+    - name: Configurar ambiente Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.x
+
+    - name: Instalar dependências
+      run: pip install schedule
+
+    - name: Enviar E-mail
+      run: python send_email.py
 
