--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -27,11 +27,12 @@ jobs:
       # Add new files in data folder, commit along with other modified files, push
       - name: Commit e push das alterações
         run: |
+          git config pull.rebase false  # merge
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
           git add data/*
           git commit -m "Atualizar arquivo CSV $(date)"
-          git pull --no-rebase origin main
+          git pull origin main
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
