--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -31,7 +31,8 @@ jobs:
           git config --local user.email "actions@github.com"
           git add data/*
           git commit -m "Atualizar arquivo CSV $(date)"
-          git pull --ff-only origin main
+          git config pull.rebase false
+          git checkout main    # troca de branch
           git pull origin main
           git push origin main
         env:
