--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -31,9 +31,8 @@ jobs:
           git config --local user.email "actions@github.com"
           git add data/*
           git commit -m "Atualizar arquivo CSV $(date)"
-          git config --global pull.rebase false
+          git config pull.ff only       # fast-forward only
           git checkout main    # troca de branch
-          git pull --ff-only
           git pull origin main
           git push origin main
         env:
