--- a/.github/workflows/save.yml
+++ b/.github/workflows/save.yml
@@ -31,7 +31,7 @@ jobs:
           git config --local user.email "actions@github.com"
           git add data/*
           git commit -m "Atualizar arquivo CSV $(date)"
-          git config pull.ff only       # fast-forward only
+          git merge --no-ff
           git pull origin main
           git push origin main
         env:
